a bit of organization

--- a/Robot/App.xaml
+++ b/Robot/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application
-    x:Class="Robot.App"
+    x:Class="Jero2.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Robot"
+    xmlns:local="using:Jero2"
     RequestedTheme="Dark">
     <Application.Resources>
         <Thickness x:Key="AppBorderThickness">2.5</Thickness>
